RESOLVED FIXED20284
JavaScript can be executed even though debugger is running and at a break point
https://bugs.webkit.org/show_bug.cgi?id=20284
Summary JavaScript can be executed even though debugger is running and at a break point
Oliver Hunt
Reported 2008-08-05 01:31:13 PDT
Go to the linked url, start the debugger. Set a breakpoint on the render function in rayjs.html click the render link, the dbeugger should hit your break point. Now hit the render link again, and the renderer will start, trigger the slow script dialog, *and* continue working without hitting any break points that may otherwise have been present (if you allow it to continue after the slow script dialog).
Attachments
Proposed patch (ignoring whitespace changes) (5.54 KB, patch)
2008-08-15 08:19 PDT, Timothy Hatcher
aroben: review+
Proposed patch (full patch) (7.65 KB, patch)
2008-08-15 08:19 PDT, Timothy Hatcher
no flags
Mark Rowe (bdash)
Comment 1 2008-08-05 13:39:57 PDT
Timothy Hatcher
Comment 2 2008-08-15 08:19:08 PDT
Created attachment 22817 [details] Proposed patch (ignoring whitespace changes)
Timothy Hatcher
Comment 3 2008-08-15 08:19:55 PDT
Created attachment 22818 [details] Proposed patch (full patch)
Adam Roben (:aroben)
Comment 4 2008-08-15 08:26:07 PDT
Comment on attachment 22817 [details] Proposed patch (ignoring whitespace changes) r=me Nice test case!
Timothy Hatcher
Comment 5 2008-08-15 09:34:34 PDT
Landed in r35783.
Note You need to log in before you can comment on or make changes to this bug.